--- a/Assets/style.css
+++ b/Assets/style.css
@@ -10,3 +10,13 @@ footer{
 h1{
     margin-top:70px;
 }
+
+body{
+    background-color: lightgray;
+}
+
+main{
+    background-color: white;
+    padding: 30px;
+    margin-top: 90px;
+}
